# easymem

./: .gitignore  EasyMem-Workflow.md  README.md  Rebuilt-EasyMem-Workflow.md  cleanup.sh  easymem  easymem-cli.py  export-easymem.sh  import-easymem.sh  install.sh  maintenance.py  memory-cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup-project.sh
.claude-plugin/: marketplace.json  plugin.json
bench/: README.md  __main__.py  corpus.py  judge.py  locomo.py  longmemeval.py  longmemeval_full.py  run.py
hooks/: _common.sh  capture-decisions.sh  capture-tool-context.sh  capture_tool_context.py  hooks.json  nudge-setup.sh  prime-easymem.sh  prime-on-compact.sh  prime-slots.sh  smart_recall.py
scripts/: _hook_merge.py  _migrate_auto_memory.py  _strip_memory_section.py  smoke.sh
semantic_server/: __init__.py  __main__.py  _json.py  bootstrap.py  cache.py  code_index.py  config.py  diversify.py  graph.py  io_utils.py  maintenance_utils.py  protocol.py  recall.py  search.py  server.py  slots.py  stem.py  synonyms.py  text.py  tools.py  tools_schema.json  traverse.py  vector.py  workflows.py
tests/: test_append_episode_nonblocking.py  test_bench_judge.py  test_bench_smoke.py  test_branch_token_cleanup.py  test_candidates_pure_intersect.py  test_cli_diff_and_migrate.py  test_code_index.py  test_config.py  test_contradiction_resolve.py  test_contradictions.py  test_create_decision_duplicate.py  test_create_entities_dedup.py  test_date_stems.py  test_decay_floor_cap.py  test_delete_remove_scrub_lookup.py  test_diversify.py  test_e2e_smoke.py  (+56 more)
(+1 files in other folders)
